Filter double scroll fix.

--- a/NewsPicker.Web/Resources/Stylesheets/Layout.less
+++ b/NewsPicker.Web/Resources/Stylesheets/Layout.less
@@ -1,4 +1,5 @@
 ﻿@import "Variables.less";
+@import "Mixins.less";
 
 * {
     transition: @base-transition;
@@ -21,7 +22,8 @@ body {
 
 main {
     position: relative;
-    display: block;
+    min-height: 100vh;
+    .flex(column);
     padding: @bar-height 0;
 }
 
